# sesl-mcp

./: README.md  prompt.txt  pyproject.toml  tax_compliance.sesl  uk_passport_example.sesl  user-guide.html
src/sesl_mcp/: server.py  sesl_prompt.txt
