[project]
name = "sesl-mcp"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastmcp",
    "sesl @ git+https://${GITHUB_PAT}:x-oauth-basic@github.com/vpowell4/sesl.git@main",
]

[project.scripts]
sesl-mcp-server = "sesl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true